@@ -181,8 +181,7 @@
         <configuration>
           <forkCount>3</forkCount>
           <reuseForks>true</reuseForks>
-          <argLine>${argLine} -Xms512m -Xmx1024m -Duser.language=en
-            -Duser.region=US -Duser.timezone=UTC</argLine>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m -Duser.region=US -Duser.timezone=UTC</argLine>
           <systemPropertyVariables>
             <user.language>en</user.language>
             <user.region>US</user.region>
